# servaan

./: .dockerignore  .env.production  .env.server  .gitignore  ACCOUNTING_SYSTEM_COMPREHENSIVE_DOCUMENTATION.md  ADMIN_DEPLOYMENT_GUIDE.md  ADMIN_DEPLOYMENT_SUMMARY.md  ADMIN_DOMAIN_FIX_GUIDE.md  AGENTS.md  BACKUP_README.md  BI_SYSTEM_COMPREHENSIVE_DOCUMENTATION_PART1.md  BI_SYSTEM_COMPREHENSIVE_DOCUMENTATION_PART2.md  BI_SYSTEM_COMPREHENSIVE_DOCUMENTATION_PART3.md  BI_SYSTEM_COMPREHENSIVE_DOCUMENTATION_PART4.md  BI_SYSTEM_COMPREHENSIVE_DOCUMENTATION_PART5.md  BI_SYSTEM_COMPREHENSIVE_DOCUMENTATION_PART6.md  BI_SYSTEM_COMPREHENSIVE_DOCUMENTATION_PART7.md  BI_SYSTEM_COMPREHENSIVE_DOCUMENTATION_PART8.md  BI_WORKSPACE_REBUILD_PLAN.md  COMPLETION_SUMMARY_VISUAL.md  CONTEXT.md  DATA_EXPLORER_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  DIMA_TENANT_SEEDING_COMPLETE.md  DOCKER_DEPLOYMENT_GUIDE.md  FINAL_DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_EXECUTION_SUMMARY.md  INVENTORY_DELETE_OPERATIONS_ANALYSIS.md  INVENTORY_MANAGEMENT_COMPREHENSIVE_DOCUMENTATION.md  INVENTORY_OPTIMIZATION_SUMMARY.md  LINTER_ERRORS_KNOWN_ISSUES.md  LINTER_FIXES_SESSION_SUMMARY.md  MOBILE_RESPONSIVE_FIX_COMPLETE.md  ORDERING_RESPONSIVE_DESIGN_FIX.md  ORDERING_REVENUE_BUG_FIX.md  ORDERING_SYSTEM_COMPREHENSIVE_DOCUMENTATION.md  PHASE3_TIER1_SERVICE_REFACTORING_SUMMARY.md  PHASE_0_DETAILED_ANALYSIS.md  PHASE_1_COMPLETION_SUMMARY.md  (+148 more)
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/capabilities/: default.json
src/desktop/src-tauri/permissions/: desktop-commands.toml
(+1564 files in other folders)
